crates/nash-can/src/snapshots/nash_can__module__tests__lambda_expr.snap
---
source: crates/nash-can/src/module.rs
description: "Code:\n\nmodule Main exposing (..)\n\nf = \\x -> x\n"
---
Module {
    name: ModuleName {
        package: None,
        name: "Main",
    },
    exports: Everything(
        Region {
            start: Position {
                line: 1,
                column: 22,
            },
            end: Position {
                line: 1,
                column: 26,
            },
        },
    ),
    docs: NoDocs(
        Region {
            start: Position {
                line: 1,
                column: 1,
            },
            end: Position {
                line: 4,
                column: 1,
            },
        },
    ),
    decls: Declare {
        definition: Def {
            name: Located {
                region: Region {
                    start: Position {
                        line: 3,
                        column: 1,
                    },
                    end: Position {
                        line: 3,
                        column: 2,
                    },
                },
                value: "f",
            },
            args: [],
            body: Located {
                region: Region {
                    start: Position {
                        line: 3,
                        column: 5,
                    },
                    end: Position {
                        line: 3,
                        column: 12,
                    },
                },
                value: Lambda {
                    parameters: [
                        Located {
                            region: Region {
                                start: Position {
                                    line: 3,
                                    column: 6,
                                },
                                end: Position {
                                    line: 3,
                                    column: 7,
                                },
                            },
                            value: Var(
                                "x",
                            ),
                        },
                    ],
                    body: Located {
                        region: Region {
                            start: Position {
                                line: 3,
                                column: 11,
                            },
                            end: Position {
                                line: 3,
                                column: 12,
                            },
                        },
                        value: VarLocal(
                            "x",
                        ),
                    },
                },
            },
        },
        next: Empty,
    },
    unions: [],
    aliases: [],
    binops: [],
}
